scripts/k8s/todo-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoweb
  namespace: web
  labels:
    deploy: todoweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoweb
  template:
    metadata:
      labels:
        app: todoweb
    spec:
      containers:
      - image: "maabrtiny3tjavaaksreg.azurecr.io/todo-java-web:1.0.2"
        imagePullPolicy: Always
        name: todoweb
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "0.3"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
          - name: secrets-store01-inline
            mountPath: /mnt/secrets-store
            readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi: 
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-secrets-web
---
apiVersion: v1
kind: Service
metadata:
  name: todoweb
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: todoweb
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 80
